@@ -160,6 +160,7 @@ modname = Aeyama
 title = \nThanks for installing the Aeyama campaign!
 linkGithub = The Github page\n(leave a ★)
 linkDiscord = Our Discord
+linkTrello = What's next
 urlNews = https://raw.githubusercontent.com/FredyJabe/aeyama/main/news/news.txt
 
 #Campaign Objectives (eg. @objective.crashSite.core)
