@@ -154,6 +154,7 @@ mod.aeyama.displayName = Aeyama
 modname = Aeyama
 title = \nMerci d'avoir avoir installé la campagne Aeyama !
 linkGithub = La page Github\n (donne une ★)
+linkTrello = What's next
 linkDiscord = Notre Discord
 urlNews = https://raw.githubusercontent.com/FredyJabe/aeyama/main/news/news.txt
 
