@@ -137,6 +137,7 @@ mod.aeyama.displayName = Аеама
 modname = Aeyama
 title = \nСпасибо за установку кампании Аеамы!
 linkGithub = Страница на гитхабе\n(Пставьте моду ★)
+linkTrello = What's next
 linkDiscord = Наш дискорд
 urlNews = https://raw.githubusercontent.com/FredyJabe/aeyama/main/news/news.txt
 
